# oauthpy

./: .gitignore  Cargo.toml  README.md  pyproject.toml
oauthpy/: defaults.py  server.py  utils.py
src/: google.rs  greetings.rs  main.rs
templates/: index.html
