[tool.poetry]
name = "oauthpy"
version = "0.1.0"
description = ""
authors = ["Xavier Petit <nuxion@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
httpx = "^0.23.0"
Authlib = "^1.1.0"
sanic = "^22.9.0"
httpx-oauth = "^0.10.1"
sanic-ext = "^22.9.0"
Jinja2 = "^3.1.2"
itsdangerous = "^2.1.2"
nanoid = "^2.0.0"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
